<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:padding="-7dip"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        >
        
      <TextView
          android:id="@+id/back_to_startmenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:background="@color/main_color"
          android:gravity="center_horizontal|center_vertical"
          android:text="@string/back"
          android:textColor="@color/white"
          android:textSize="60dip" />
      
      <TextView
          android:id="@+id/levels_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@color/main_color"
          android:gravity="center_horizontal|center_vertical"
          android:text="@string/start_title"
          android:textColor="@color/white"
          android:textSize="40dip" />
        
    </LinearLayout>
   

    
     <TextView
        android:id="@+id/easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/playbutton_selector"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/easy_model"
        android:textSize="20sp"
        android:textColor="@color/white" />
    
     <TextView
         android:id="@+id/medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-7dip"
         android:text="@string/medium_model"
         android:layout_weight="1"
         android:textSize="20sp"
         android:background="@drawable/button_selector"
         android:gravity="center_horizontal|center_vertical"
         android:textColor="@color/ink" />
     
    
    
    <TextView
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dip"
		android:background="@drawable/button_selector"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/hard_model"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@color/ink" />
    
</LinearLayout>